tests/negative/Test14.sp
(* Testing wrong refinement *)
abs:Int where (val:Int)  ;
